templates/bootstrap4-hor/stylesheet.css
/* ... */
.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li {
	list-style-type: none;
	font-weight: normal;
}

.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li a {
	color: #3f4c58;
	font-weight: bold;
	font-size: 1rem;
}

.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li a:hover {
	color: #007bff;
	background-color: #ffffff;
	padding-left: 15px; 
	transition: 0.5s;
}

.navbar-light .navbar-nav .nav-link {
	color: #007bff;
}

	.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li ul li a {
	font-weight: normal;
}

.noParent{
	margin-bottom: 30px;
}

.categories_nav .category_top .nav-link {
	color: white;
}

.categories_nav .category_top .nav-link:hover {
	color: white;
}

@media (min-width: 575px) {

	.subcategories {
		border: 1px solid #3f4c58;
	}

}

@media (max-width: 575px) {

	.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li a {
		font-size: 0.95rem;
	}

	.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li ul li a,
	.categories_nav ul.navbar-nav a {
		display: inline-block;
	}

	.arrow {
		display: inline-block;
		margin-right: 10px;
		margin-left: 10px;
		margin-bottom: 2px;
		width: 10px;
		height: 10px;
		border-bottom: 2px solid black;
		border-left: 2px solid black;
	}
	.arrow-down {
		transform: rotate(-45deg);
	}
	
	.arrow-up {
		transform: rotate(135deg);
		margin-bottom: -2px;
	}

	.click_arrow {
		padding-left: 25px;
		padding-top: 10px;
		/* padding-bottom: 10px; */
		float:right;

	}

	.subcategories .container .list-style .noParent ul {
		display: none;
	}

	.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style {
		margin-top: 10px;
		padding-left: 0px;
		padding-right: 0px;
		margin-bottom: 0px;
		border: none;
	}

	.categories_nav .navbar-nav .nav-link {
		color: #007bff;
		font-size: 1rem;
		font-weight: bold;
	}
	
	.category_top {
		display: none;
	}
	
	.horizontal-nav-picture-style {
		display: none;
	}

	.categories_nav ul.navbar-nav li:hover > .subcategories {
		display: none;
	}

	.arrow {
		display: inline-block;
	}

	.level2 {
		margin-bottom: 10px;
	}

	.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li a {
		color: #007bff !important;
		font-weight: normal;
	}

	.categories_nav ul.navbar-nav li:hover > .subcategories {
		position: relative;
	}

	.categories_nav .navbar-collapse .navbar-nav .nav-item {
		border-top:1px solid #e5e5e5;
		/*border-bottom:none;*/
	}
	
	.categories_nav .navbar-collapse .navbar-nav .nav-item .subcategories .list-style ul li a:hover {
		cursor: pointer;
	}

	.no-padding {
		padding: 0px;
	}
	
	.level2 > a.nav-link {
		padding-left: 10px;
	}
	

	.level3 > a.nav-link {
		padding-left: 20px;
	}

	.level4 > a.nav-link {
		padding-left: 30px;
	}
	
	.level5 > a.nav-link {
		padding-left: 40px;
	}

}

.breadcrumb li {
	margin-right: 10px;
}

#languages_box {
	margin-left: 10px;
}

.carousel-item img {
	width: 100%;
}

#carousel-shophelfer {
	margin-bottom: 15px;
}

#indeximages_container {
	margin-bottom: 15px;
	margin-top: 1.25rem;
}

.morepics {
	margin-top: 15px;
}

.productoptions table {
	float:right;
	clear: both;
}

.indeximages_link:hover{
	text-decoration: none;
}

.index_images_box {
	position:relative;
	text-align: center;
	text-decoration: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.index_images_box img {
	height: 200px;
	width: 100%;
}

.index_images_box p {
	position: absolute;
	bottom: 0;
	color: white;
	width: 100%;
}

.hidden {
	display: none;
}

#languages_box img {
	margin: 0 3px;
}

@media screen and (min-width: 768px) and (max-width: 992px) {
	.index_images_box img {
		height: 150px;
	}
}

@media (max-width: 764px) {

	.index_images_box {
		margin-bottom: 15px;
	}
	.index_images_box img {
		height: auto;
	}

}

@media (max-width: 572px) { 
	.navbar-toggler {
		margin-bottom: 10px;
	}
	.form-control {
		width: 100% !important;
	}
}

@media (max-width: 400px) { 
	.table td, .table th {
		padding: 0px;
	}
}

@media screen and (max-width: 500px) {
    
    div.highlightbox input, div.highlightbox textarea {
	width: 200px !important;
    }
}

@media screen and (max-width: 330px) {
    
    div.highlightbox input, div.highlightbox textarea {
	width: 150px !important;
    }
}

@media screen and (max-width: 290px) {
    
    div.highlightbox input, div.highlightbox textarea {
	width: 135px !important;
    }
}

